--- a/styles/layout.less
+++ b/styles/layout.less
@@ -75,6 +75,11 @@
     }
 }
 
+#messagelist-content:not(.layout-widescreen) > div.listing-hover-menu {
+    /* .listing-hover-menu is hard coded in Elastic skin */
+    display: none;
+}
+
 html.layout-large,
 html.layout-normal {
     #layout.layout-desktop,
