improve separtion of toolbars

--- a/styles/dark.less
+++ b/styles/dark.less
@@ -3,6 +3,13 @@
  */
 
 html.dark-mode {
+    #layout.layout-desktop,
+    #layout.layout-list {
+        #layout-list > .header > #toolbar-menu {
+            border-left-color: @color-dark-border;
+        }
+    }
+
     #layout.layout-desktop #layout-list {
         .iframe-wrapper {
             border-top-color: @color-dark-border;
